[feature/architecture] *add timber

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,5 @@ dependencies {
     implementation(platform("com.squareup.okhttp3:okhttp-bom:${okHttpVersion}"))
     implementation("com.squareup.okhttp3:okhttp")
     implementation("com.squareup.okhttp3:logging-interceptor")
+    implementation "com.jakewharton.timber:timber:${timberVersion}"
 }
